<resources>
    <string name="app_name">CarteiraEducada</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_months">Months</string>
    <string name="menu_standard_month">Standard Month</string>
    <string name="menu_yearly">Yearly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenditure">Expenditure</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="money">$</string>
    <string name="total_income">Total Income</string>
    <string name="previous_month">Previous Month</string>
    <string name="remaining_money">Remaining Money</string>
    <string name="emergency_reserve">Emergency Reserve</string>
    <string name="current_reserve">Current Reserve</string>
    <string name="available_money">Available Money</string>
    <string name="expense_this_month">Expense This Month</string>
    <string name="_0_00">0.00</string>
    <string name="move_in_reserve">Move in Reserve</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="date">Date</string>
</resources>