<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/gray_light">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tf_fincard_name"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_fincard_name"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tf_fincard_value"
        android:hint="@string/money"
        app:layout_constraintTop_toBottomOf="@id/tf_fincard_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tf_fincard_date"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_fincard_value"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tf_fincard_date"
        android:hint="@string/date"
        app:layout_constraintTop_toBottomOf="@id/tf_fincard_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tf_fincard_value"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_fincard_date"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>